--- a/bootstrap.css
+++ b/bootstrap.css
@@ -88,7 +88,7 @@ sub {
 img {
   /* Responsive images (ensure images don't scale beyond their parents) */
 
-  max-width: 100%;
+  max-width: 80%;
   /* Part 1: Set a maxium relative to the parent */
 
   width: auto\9;
@@ -207,11 +207,11 @@ textarea {
 }
 body {
   margin: 30px 0;
-  font-family: 'Gill Sans W01 Light', arial, sans-serif;
+  font-family: 'Tahoma';
   font-size: 14px;
   line-height: 20px;
   color: #333333;
-  background-color: #FFFFFF;
+  background-color: #E0EEEE;
 }
 a {
   color: #0088cc;
@@ -3120,7 +3120,7 @@ input[type="submit"].btn.btn-mini {
   font-size: 11px;
   font-weight: bold;
   line-height: 20px;
-  color: #999999;
+  color: #68838B;
   text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
   text-transform: uppercase;
 }
@@ -3128,15 +3128,14 @@ input[type="submit"].btn.btn-mini {
   margin-top: 9px;
 }
 .nav-list {
-  padding-right: 15px;
-  padding-top: 40px;
+  padding-right: 10px;
   margin-bottom: 0;
 }
 .nav-list > li > a,
 .nav-list .nav-header {
   margin-left: -15px;
   margin-right: -15px;
-  text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
+  text-shadow: 0 1px 0 rgba(2, 8, 60, 0.1);
 }
 .nav-list > li > a {
   padding: 3px 15px;
@@ -3144,7 +3143,7 @@ input[type="submit"].btn.btn-mini {
   line-height: 15px;
 }
 .nav-list > .active > a,
-.nav-list > .active > a:hover,
+.nav-list > .active > a:hover
 .nav-list > .active > a:focus {
   color: #ffffff;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.2);
@@ -3156,7 +3155,7 @@ input[type="submit"].btn.btn-mini {
 }
 .nav-list .divider {
   *width: 100%;
-  height: 1px;
+  height: 10px;
   margin: 9px 1px;
   *margin: -5px 0 5px;
   overflow: hidden;
@@ -4044,7 +4043,8 @@ input[type="submit"].btn.btn-mini {
   border-bottom-right-radius: 4px;
 }
 .pagination-centered {
-  text-align: right;
+  text-align: center;
+  font-family: 'Georgia'
 }
 .pagination-right {
   text-align: right;
@@ -5841,10 +5841,10 @@ button.close {
     width: 870px;
   }
   .span8 {
-    width: 620px;
+    width:900px;
   }
   .span7 {
-    width: 900px;
+    width: 950px;
   }
   .span6 {
     width: 570px;
